[package]
name = "graff"
version = "0.1.0"
authors = ["Alfie Davies <research@alfied.xyz>"]
edition = "2021"
rust-version = "1.75.0"
description = "A simple library for manipulating graphs."
readme = "README.md"
repository = "https://github.com/alfiemd/graff"
license = "Unlicense"
keywords = ["graphs", "mathematics"]
categories = ["data-structures", "mathematics", "science"]
resolver = "2"

[dependencies]
serde = { version = "1.0.210", optional = true }

[features]
serde = ["serde/derive"]
